...
          tabBarIcon: ({ size }) => {
            return (
              <View
                className={`h-fit w-fit rounded-full bg-white p-0.5  ${route.pathname === "/newplant" || route.pathname.includes("edit") ? " shadow-sm" : "shadow-sm shadow-black "}`}
              >
                <View
                  testID="newplant-tabs"
                  className={`primary flex h-fit w-fit items-center justify-center rounded-full p-sm ${route.pathname === "/newplant" ? "bg-black/[.10] bg-white" : ""}`}
                >
                  <AntDesign
                    className="w-[20px]"
                    name="plus"
                    size={size}
...
