appId: com.corentinkittel.arozvit
---
# - openLink: exp://192.168.1.11:8081
- launchApp
- runFlow:
    file: ../auth/login.yaml
    when:
      visible:
        id: "google-oauth-button"
- tapOn:
    id: newplant-tabs
- tapOn:
    id: nameInput
- inputRandomPersonName
- tapOn:
    id: descriptionInput
- inputRandomText
- tapOn:
    id: wateringIntervalDropdown
- tapOn: semaines
- tapOn:
    id: dayBetweenWateringInput
- eraseText
- inputText: 5
- hideKeyboard
- tapOn:
    id: datePickerButton
- tapOn: "1"
- tapOn: "OK"
- tapOn: "Ajouter ma plante"
- assertVisible: "Mes plantes"
